--- a/app/src/main/res/layout/punch_fragment.xml
+++ b/app/src/main/res/layout/punch_fragment.xml
@@ -6,7 +6,7 @@
     <RelativeLayout
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="38dp"
         android:background="@color/lanse">
 
         <TextView
@@ -14,6 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="打卡"
+            android:layout_marginBottom="3dp"
             android:textColor="#f77605"
             android:textSize="25sp"
             android:textStyle="bold" />
@@ -89,7 +90,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/beizhu_border"
+            android:background="@drawable/edittext_style02"
             android:paddingLeft="5dp" />
 
     </LinearLayout>
