--- a/app/src/main/res/layout/mine_fragment.xml
+++ b/app/src/main/res/layout/mine_fragment.xml
@@ -6,15 +6,16 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="38dp"
+        android:layout_height="65dp"
         android:background="@color/lanse">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_alignParentBottom="true"
             android:text="我的"
-            android:layout_marginBottom="3dp"
+            android:layout_marginBottom="2dp"
             android:textColor="#f77605"
             android:textSize="25sp"
             android:textStyle="bold" />
