--- a/app/src/main/res/layout/punch_fragment.xml
+++ b/app/src/main/res/layout/punch_fragment.xml
@@ -6,15 +6,16 @@
     <RelativeLayout
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="38dp"
+        android:layout_height="65dp"
         android:background="@color/lanse">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
+            android:layout_marginBottom="2dp"
             android:text="打卡"
-            android:layout_marginBottom="3dp"
             android:textColor="#f77605"
             android:textSize="25sp"
             android:textStyle="bold" />
@@ -52,18 +53,45 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <a1506a4.bwie.com.bwapp.view.MyCircleView
-            android:id="@+id/circleView1"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:layout_centerHorizontal="true" />
+        <RelativeLayout
+            android:layout_width="150dp"
+            android:layout_height="150dp">
 
-        <a1506a4.bwie.com.bwapp.view.MyCircleView
-            android:id="@+id/circleView2"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="20dp" />
+            <a1506a4.bwie.com.bwapp.view.MyCircleView
+                android:id="@+id/circleView1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="上下班打卡"
+                android:textColor="#ffffff"
+                android:textSize="22sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginLeft="20dp">
+
+            <a1506a4.bwie.com.bwapp.view.MyCircleView
+                android:id="@+id/circleView2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="出差打卡"
+                android:textColor="#ffffff"
+                android:textSize="22sp" />
+        </RelativeLayout>
+
 
     </LinearLayout>
 
