--- a/app/src/main/res/layout/send_notification_fragment.xml
+++ b/app/src/main/res/layout/send_notification_fragment.xml
@@ -23,24 +23,21 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginBottom="5dp"
+        android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_send_notification"
-            android:layout_width="0dp"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
             android:background="@mipmap/gouback"
             android:text="发送" />
 
         <Button
             android:id="@+id/btn_sendAll_notification"
-            android:layout_width="0dp"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
+            android:layout_marginLeft="50dp"
             android:background="@mipmap/gouback"
             android:text="逐级发送" />
     </LinearLayout>
