--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -155,7 +155,7 @@
     <color name="darkgoldenrod">#b8860b</color>
     <!-- 暗金黄色 -->
     <color name="firebrick">#C62F2F</color>
-    <color name="lanse">#87CEFA</color>
+    <color name="lanse">#439DFE</color>
 
     <!-- 火砖色 -->
     <color name="powderblue">#b0e0e6</color>
