--- a/app/src/main/res/layout/mine_fragment.xml
+++ b/app/src/main/res/layout/mine_fragment.xml
@@ -16,7 +16,7 @@
             android:layout_alignParentBottom="true"
             android:text="我的"
             android:layout_marginBottom="2dp"
-            android:textColor="#f77605"
+            android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
 
