--- a/app/src/main/res/layout/notification_fragment.xml
+++ b/app/src/main/res/layout/notification_fragment.xml
@@ -17,7 +17,7 @@
             android:layout_centerInParent="true"
             android:layout_marginBottom="2dp"
             android:text="通知"
-            android:textColor="#f77605"
+            android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
 
