--- a/app/src/main/res/layout/punch_fragment.xml
+++ b/app/src/main/res/layout/punch_fragment.xml
@@ -16,7 +16,7 @@
             android:layout_centerInParent="true"
             android:layout_marginBottom="2dp"
             android:text="打卡"
-            android:textColor="#f77605"
+            android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
 
