--- a/app/src/main/res/drawable/select_all_selector.xml
+++ b/app/src/main/res/drawable/select_all_selector.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/chartreuse" android:state_selected="true" />
-    <item android:drawable="@color/white" android:state_pressed="false" />
+    <item android:color="@color/chartreuse" android:state_selected="true" />
+
+    <item android:color="@color/chartreuse" android:state_pressed="true" />
+
+    <item android:color="@color/white" android:state_selected="false" />
 </selector>
